syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.signal.registration.sender.prescribed";

package org.signal.registration.sender.prescribed;

message PrescribedVerificationCodeSessionData {
  string verification_code = 1;
}
